--- a/splash.css
+++ b/splash.css
@@ -46,6 +46,13 @@ nav {
   height: 25px;
   margin-right: 10px; }
 
+.twitter-icon {
+  content: url(twitter-icon.svg);
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  vertical-align: bottom; }
+
 .checkmarks {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
