--- a/splash.css
+++ b/splash.css
@@ -53,6 +53,9 @@ nav {
   width: 20px;
   vertical-align: bottom; }
 
+.twitter-link {
+  color: #fff; }
+
 .checkmarks {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
